# react-native-audio-recorder-player

./: .eslintrc.js  .prettierrc.js  .travis.yml  OAT.xml  README.OpenSource  README.md  index.d.ts  index.js  index.js.flow  index.ts  package.json
harmony/: audio_recorder_player.har
harmony/audio_recorder_player/: BuildProfile.ets  ResourceTable.txt  index.ets  oh-package.json5  ts.ts
harmony/audio_recorder_player/src/main/: module.json5
harmony/audio_recorder_player/src/main/cpp/: CMakeLists.txt  RNAudioRecorderPlayerPackage.h  RNAudioRecorderPlayerTurboModule.cpp  RNAudioRecorderPlayerTurboModule.h
harmony/audio_recorder_player/src/main/ets/: RNAudioRecorderPlayerPackage.ts  RNAudioRecorderPlayerTurboModule.ts  index.d.ts
harmony/audio_recorder_player/src/main/ets/audioPlayer/: AudioPlayer.ts  types.ts
harmony/audio_recorder_player/src/main/ets/recorder/: Recorder.ts  types.ts
harmony/audio_recorder_player/src/main/ets/utils/: DateTimeUtils.ts  Logger.ts  SaveAudioAsset.ts
src/: NativeAudioRecorderPlayerModule.ts  index.d.ts
